# boiler-housing

./: .env  .gitignore  README.md  development.md  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json
backend/: .env  README.md  pyproject.toml
backend/app/: main.py  utils.py
backend/app/alembic/: env.py  script.py.mako
backend/app/alembic/versions/: 073b219904c9_merge_multiple_heads.py  0a55b92fc079_changed_conversations_sender_name_to_.py  1333b5bd61d5_created_change_password_class.py  19f858e95032_add_profile_tutorial_status.py  1b8ef5fac825_add_recovery_info_to_database.py  20924e72b3a1_initial_schema.py  239fac48ae6a_add_column_phone_number_to_user.py  23c4696d9900_add_faq_database.py  2991de6847bd_merging_multiple_heads.py  29cafea606b9_add_column_bio_and_profile_type_to_user_.py  2b86cf182ea1_added_images_models_for_listings.py  2da5867559e2_merging_two_heads.py  2ef6baff6e7e_update_dates_to_be_strings.py  344d7394747f_merging_two_heads.py  34565e904379_changed_autologout_time_to_a_float_so_.py  3d0611c27947_add_phone_number_to_user.py  (+43 more)
backend/app/api/: deps.py  main.py  websockets.py
backend/app/core/: config.py  db.py  mailgun_service.py  security.py
backend/app/crud/: faq.py  files.py  items.py  mailgun.py  messages.py  renter_preferences.py  reviews.py  users.py
backend/app/models/: __init__.py  faq.py  files.py  images.py  items.py  lease_agreements.py  listings.py  messages.py  models.py  renter_preferences.py  reviews.py  users.py  utils.py
backend/app/services/: file_service.py
backend/app/tests/: conftest.py
(+104 files in other folders)
