[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.1",
    "black>=25.1.0",
    "fastapi[standard]>=0.115.8",
    "jinja2>=3.1.5",
    "pyjwt>=2.10.1",
    "sqlmodel>=0.0.22",
    "tenacity>=9.0.0",
]
